cleanup (css fix, remove white space, remove unnecessary x.blob() promise, remove duplicate code from overridden RPC client connect, remove ids from svg paths

--- a/src/css/components/_appstore-menu.scss
+++ b/src/css/components/_appstore-menu.scss
@@ -26,7 +26,7 @@
     border-bottom: 2px solid;
 
     &__image {
-        flex: 0.75;
+        flex: 0.5;
         border-radius: 4px;
         width: 16%;
         max-width: 16%;
